test add another test

--- a/.github/workflows/aux-functions-tests.yml
+++ b/.github/workflows/aux-functions-tests.yml
@@ -8,5 +8,7 @@ jobs:
         working-directory: minunit
     steps:
     - uses: actions/checkout@v2
-    - name: make
+    - name: fill-list-tests
       run: make fill
+    - name: check-static-tests
+      run: make check
