--- a/.github/workflows/norminette.yml
+++ b/.github/workflows/norminette.yml
@@ -13,9 +13,9 @@ jobs:
       with:
         python-version: 3.9
     - name: Install dependencies
-      run:
+      run: |
         python -m pip install --upgrade pip setuptools
         python -m pip install norminette
     - name: Runs norminette
-      run:
+      run: |
         norminette
