--- a/.github/workflows/bonus.yml
+++ b/.github/workflows/bonus.yml
@@ -1,12 +1,12 @@
-name: aux-functions-tests
+name: bonus part
 on: [push]
 jobs:
-  cat-one-line:
+  bonus-part:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: minunit
     steps:
     - uses: actions/checkout@v2
-    - name: fill-list-tests
-      run: make pieces
+    - name: bonus test
+      run: make b
