--- a/.github/workflows/mandatory.yml
+++ b/.github/workflows/mandatory.yml
@@ -8,5 +8,7 @@ jobs:
         working-directory: tests
     steps:
     - uses: actions/checkout@v2
+    - name: Checkout submodules
+      uses: textbook/git-checkout-submodule-action@master
     - name: mandatory test
       run: bash run.sh m
